fix: course card button placement on mobile

--- a/src/learningpath/index.css
+++ b/src/learningpath/index.css
@@ -248,7 +248,7 @@
     .pgn__card-footer {
       flex-direction: column;
 
-      a:has(.btn) {
+      div:has(.btn) {
         align-self: flex-end;
         padding: 1rem 0.5rem 1rem 0;
 
